[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pqtree_rs"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "pqtree/"

[tool.pixi.project]
description = "Faster PQ Tree library for Python"
authors = ["Parsa Bahraminejad <pbahrami@uwaterloo.ca>"]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
pqtree_rs = { path = ".", editable = true }

[tool.pixi.tasks]
publish = "maturin publish " 
build = "maturin build"
dev = "maturin develop"
test = "pytest"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-cov = "*"
